[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ui/Scripts/Menu_Ui.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/Spirit's Sword.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Music/sonidos/button_up.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Music/sonidos/on button.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 75
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Game_Name" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -283.5
margin_top = 120.0
margin_right = 283.5
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
text = "Marshall dungeon "
align = 1
valign = 1

[node name="VBoxButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.5
margin_top = -189.0
margin_right = 121.5
margin_bottom = -67.0
custom_constants/separation = 50

[node name="Nuevo Juego" type="Button" parent="VBoxButtons"]
margin_right = 243.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Nuevo Juego"

[node name="Salir" type="Button" parent="VBoxButtons"]
margin_top = 86.0
margin_right = 243.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "Salir"

[node name="AudioMouseOnButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 4.0

[node name="AudioButton_Down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="button_down" from="VBoxButtons/Nuevo Juego" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxButtons/Nuevo Juego" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxButtons/Nuevo Juego" to="." method="_on_Nuevo_Juego_pressed"]
[connection signal="button_down" from="VBoxButtons/Salir" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxButtons/Salir" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxButtons/Salir" to="." method="_on_Salir_pressed"]
